Update solr options for OpenJDK > 8